Jackson 3 upgrade